<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ui.fragment.account.AccountFragment">

    <!-- Заголовок -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginBottom="20dp"/>

    <!-- Фото профиля -->
    <ImageView
        android:id="@+id/ivProfilePhoto"
        android:layout_width="86dp"
        android:layout_height="115dp"
        android:layout_gravity="center"
        android:src="@drawable/mask_group"
        android:layout_marginBottom="30dp"/>

    <!-- Имя пользователя (опционально) -->
    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"/>

    <!-- Меню аккаунта -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#F5F5F5"
        android:padding="10dp"
        android:divider="?android:attr/dividerHorizontal"
        android:showDividers="middle">

        <!-- Пункт 1: Избранное -->
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/btnFavourites"
            android:background="?attr/selectableItemBackground">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Favourite"
                android:textSize="18sp"/>
        </LinearLayout>

        <!-- Пункт 2: Редактировать аккаунт -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/btnEditAccount"
            android:background="?attr/selectableItemBackground">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Edit_Account"
                android:textSize="18sp"/>
        </LinearLayout>

        <!-- Пункт 3: Помощь -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/btnHelp"
            android:background="?attr/selectableItemBackground">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Help"
                android:textSize="18sp"/>
        </LinearLayout>

        <!-- Пункт 4: Мои курсы -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/btnMyCourses"
            android:background="?attr/selectableItemBackground">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/My_courses"
                android:textSize="18sp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>